News
====

Pyclewn 2.0.1
-------------

.. February 26, 2015

Bug fixes
^^^^^^^^^

* The ``Cquit`` command cannot start a new gdb session anymore.

* The list buffer windows are now empty after the ``Cquit`` command.

Pyclewn 2.0
-----------

.. February 9, 2015

New features
^^^^^^^^^^^^

* Three clewn buffers are updated by gdb, they list the breakpoints, the
  backtrace and the threads. One can jump with the <CR> key or the mouse to
  the corresponding source code line from the ``(clewn)_breakpoints`` window
  or switch to the corresponding frame from the ``(clewn)_backtrace`` window,
  or switch to the correponding thread with the ``(clewn)_threads`` window.
  The ``Ccwindow`` command has been removed.

* All the Vim functions defined by pyclewn that split windows can be
  overriden.

* A compound watched variable in ``(clewn)_variables`` can be expanded and
  collapsed with the <CR> key or the mouse.

* The new ``Cballooneval`` command switches on/off the Vim balloon without
  interfering with the pyclewn key mappings that rely on the Vim 'ballooneval'
  option to be functional.

* The first optional argument of the ``:Pyclewn`` Vim command selects the
  debugger and the following arguments are passed to the debugger. For
  example, to debug ``foobar args`` with gdb, run the Vim commmand
  ``:Pyclewn gdb --args foobar args``.

* The new ``g:pyclewn_terminal`` Vim global variable allows the pyclewn
  program started with ``:Pyclewn`` to run in a terminal instead of as a
  daemon, and helps trouble shooting startup problems.

Changes
^^^^^^^

* Windows support has been removed. Pyclewn runs now on Python 2.7 or Python
  3.2 or newer and the same source code is used for all those Python versions.
  Pyclewn uses now asyncio (or trollius on Python versions that do not support
  asyncio, i.e. version 2.7 or older than 3.4) instead of the deprecated
  asyncore Python module.

* The preferred method to install pyclewn is ``pip``. The Vim run time files